--- a/prereq/kafka/broadcast-topic.yaml
+++ b/prereq/kafka/broadcast-topic.yaml
@@ -1,12 +1,12 @@
 apiVersion: kafka.strimzi.io/v1beta1
 kind: KafkaTopic
 metadata:
-  name: object-detection
+  name: images
   labels:
-    strimzi.io/cluster: modh-demo
+    strimzi.io/cluster: object-detection
 spec:
   partitions: 1
   replicas: 1
-  topicName: object-detection
+  topicName: broadcast
   config:
-    retention.ms: 7200000
+    retention.ms: 0
