--- a/prereq/kafka/objects-topic.yaml
+++ b/prereq/kafka/objects-topic.yaml
@@ -1,12 +1,13 @@
 apiVersion: kafka.strimzi.io/v1beta1
 kind: KafkaTopic
 metadata:
-  name: images
+  name: objects
   labels:
-    strimzi.io/cluster: modh-demo
+    strimzi.io/cluster: object-detection
+    app: object-detection-common
 spec:
   partitions: 1
   replicas: 1
-  topicName: images
+  topicName: objects
   config:
     retention.ms: 7200000
