Removed memory and cpu resources for apps.

--- a/app/app.yaml
+++ b/app/app.yaml
@@ -62,13 +62,14 @@ items:
           envFrom:
             - configMapRef:
                 name: object-detection
-          resources:
-            requests:
-              cpu: 1000m
-              memory: 2000Mi
-            limits:
-              cpu: 2000m
-              memory: 8000Mi
+          resources: {}
+#          resources:
+#            requests:
+#              cpu: 1000m
+#              memory: 2000Mi
+#            limits:
+#              cpu: 2000m
+#              memory: 6000Mi
           livenessProbe:
             httpGet:
               path: /api/status
