Update setup with additional kafka settings.

--- a/app/app.yaml
+++ b/app/app.yaml
@@ -62,6 +62,8 @@ items:
           envFrom:
             - configMapRef:
                 name: object-detection
+            - secretRef:
+                name: object-detection
           resources: {}
 #          resources:
 #            requests:
