--- a/.env.default
+++ b/.env.default
@@ -4,7 +4,7 @@
 #OC_PASSWORD=specify_in_.env
 #OC_TOKEN=specify_in_.env
 #OC_PROJECT=specify_in_.env
-OBJECT_DETECTION_URL=http://object-detection-rest:8080/prediction
+OBJECT_DETECTION_URL=http://object-detection-rest:8080/predictions
 KAFKA_BOOTSTRAP_SERVER=object-detection-kafka-bootstrap:9092
 KAFKA_SECURITY_PROTOCOL=PLAINTEXT
 KAFKA_SASL_MECHANISM=
