--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 #OC_USER=specify_in_.env
 #OC_PASSWORD=specify_in_.env
 #OC_TOKEN=specify_in_.env
-#OC_PROJECT=specify_in_.env
+OC_PROJECT=object-detection-demo
 OBJECT_DETECTION_URL=http://object-detection-rest:8080/predictions
 KAFKA_BOOTSTRAP_SERVER=object-detection-kafka-bootstrap:9092
 KAFKA_SECURITY_PROTOCOL=PLAINTEXT
