Switch to git based app. Change project set.

--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 ############### Required. No Default. Must specify in .env ###############
-#OC_URL=https://specify.in.env:6443
-#OC_USER=specify_in_.env
-#OC_PASSWORD=specify_in_.env
-#OC_TOKEN=specify_in_.env
-OC_PROJECT=object-detection-demo
+#OC_URL=https://specify.in.env.local:6443
+#OC_USER=specify_in_.env.local
+#OC_PASSWORD=specify_in_.env.local
+#OC_TOKEN=specify_in_.env.local
+#OC_PROJECT=specify_in_.env.local
+
 OBJECT_DETECTION_URL=http://object-detection-rest:8080/predictions
 KAFKA_BOOTSTRAP_SERVER=object-detection-kafka-bootstrap:9092
 KAFKA_SECURITY_PROTOCOL=PLAINTEXT
