Update to customize app git repo.

--- a/.env
+++ b/.env
@@ -5,6 +5,9 @@
 #OC_TOKEN=specify_in_.env.local
 #OC_PROJECT=specify_in_.env.local
 
+APP_GIT_REPO=https://github.com/rh-aiservices-bu/object-detection-app.git
+REST_SERVICE_GIT_REPO=https://github.com/rh-aiservices-bu/object-detection-rest.git
+KAFKA_CONSUMER_GIT_REPO=https://github.com/rh-aiservices-bu/object-detection-kafka-consumer.git
 OBJECT_DETECTION_URL=http://object-detection-rest:8080/predictions
 KAFKA_BOOTSTRAP_SERVER=object-detection-kafka-bootstrap:9092
 KAFKA_SECURITY_PROTOCOL=PLAINTEXT
