--- a/common/common.yaml
+++ b/common/common.yaml
@@ -1,11 +1,12 @@
-apiVersion: v1
+# apiVersion: v1
+apiVersion: template.openshift.io/v1
 kind: Template
 
 labels:
-  application: object-detection-common
+  application: car-common
 
 metadata:
-  name: object-detection-common
+  name: car-common
 
 parameters:
   - name: KAFKA_BOOTSTRAP_SERVER
@@ -16,18 +17,18 @@ parameters:
   - name: KAFKA_TOPIC_IMAGES
   - name: KAFKA_TOPIC_OBJECTS
   - name: OBJECT_DETECTION_URL
-    value: "http://object-detection-rest:8080/predictions"
+    value: "http://car-rest:8080/predictions"
 
 objects:
   - apiVersion: v1
     kind: Secret
     metadata:
-      name: object-detection-kafka
+      name: car-kafka
       labels:
-        app: object-detection-common
-        app.kubernetes.io/component: object-detection-common
-        app.kubernetes.io/instance: object-detection-common
-        app.kubernetes.io/part-of: object-detection-common
+        app: car-common
+        app.kubernetes.io/component: car-common
+        app.kubernetes.io/instance: car-common
+        app.kubernetes.io/part-of: car
     data:
     stringData:
       KAFKA_BOOTSTRAP_SERVER: ${KAFKA_BOOTSTRAP_SERVER}
@@ -41,12 +42,12 @@ objects:
   - apiVersion: v1
     kind: ConfigMap
     metadata:
-      name: object-detection-rest
+      name: car-rest
       labels:
-        app: object-detection-common
-        app.kubernetes.io/component: object-detection-common
-        app.kubernetes.io/instance: object-detection-common
-        app.kubernetes.io/part-of: object-detection-common
+        app: car-common
+        app.kubernetes.io/component: car-common
+        app.kubernetes.io/instance: car-common
+        app.kubernetes.io/part-of: car
     data:
       OBJECT_DETECTION_URL: ${OBJECT_DETECTION_URL}
 
