--- a/manifests/300.rest.deployment.yaml
+++ b/manifests/300.rest.deployment.yaml
@@ -3,8 +3,16 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   annotations:
-    image.openshift.io/triggers: >-
-      [{"from":{"kind":"ImageStreamTag","name":"car-rest:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"car-rest\")].image"}]
+    image.openshift.io/triggers: |-
+      [
+        {
+          "from":{
+            "kind":"ImageStreamTag",
+            "name":"car-rest:latest"
+          },
+          "fieldPath":"spec.template.spec.containers[?(@.name==\"car-rest\")].image"
+        }
+      ]
   name: car-rest
   labels:
     app: car-rest
@@ -12,13 +20,15 @@ metadata:
     app.kubernetes.io/instance: car-rest
     app.kubernetes.io/part-of: car
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app.kubernetes.io/part-of: car
       deployment: car-rest
   template:
     metadata:
+      annotations:
+        alpha.image.policy.openshift.io/resolve-names: '*'
       labels:
         app.kubernetes.io/part-of: car
         deployment: car-rest
@@ -32,7 +42,7 @@ spec:
           resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       dnsPolicy: ClusterFirst
