--- a/manifests/kustomization.yaml
+++ b/manifests/kustomization.yaml
@@ -2,7 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - "400.rbac.yaml"
   - "100.rest.imagestream.yaml"
   - "200.rest.buildconfig.yaml"
   - "300.rest.deployment.yaml"
-  - "400.rbac.yaml"
+  - "400.rest.service.yaml"
+  - "500.rest.route.yaml"
