--- a/manifests/argo-app1.yaml
+++ b/manifests/argo-app1.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: app-spring-petclinic
+  name: app-rest
   namespace: openshift-gitops
 spec:
   destination:
@@ -13,7 +13,7 @@ spec:
       recurse: true
     path: app
     repoURL: https://github.com/siamaksade/openshift-gitops-getting-started.git
-    targetRevision: main
+    targetRevision: dev
   syncPolicy:
     automated:
       prune: true
