--- a/manifests/kustomization.yaml
+++ b/manifests/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: argotest01
+
 resources:
   #- "400.rbac.yaml"
   - "100.rest.imagestream.yaml"
