--- a/manifests/kustomization.yaml
+++ b/manifests/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: argotest01
+#namespace: argotest01
+namespace: argocd-instance
 
 resources:
   #- "400.rbac.yaml"
