--- a/argocd-app1/argo-app1.yaml
+++ b/argocd-app1/argo-app1.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd-instance
 spec:
   destination:
-    namespace: argotest01
+    namespace: argocd-instance
     server: https://kubernetes.default.svc
   project: default
   source:
