--- a/argocd-app1/argo-app1.yaml
+++ b/argocd-app1/argo-app1.yaml
@@ -10,11 +10,12 @@ spec:
   project: default
   source:
     directory:
-      recurse: true
+      # I believe I came across a bug then the line below is true
+      recurse: false
     path: manifests
     repoURL: https://github.com/rh-aiservices-bu/car-deploy.git
     targetRevision: dev
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    automated: {}
+      #prune: true
+      #selfHeal: true
