--- a/argocd-instance/namespace.yaml
+++ b/argocd-instance/namespace.yaml
@@ -2,3 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: argocd-instance
+  annotations:
+    openshift.io/description: AR Coupons app for egranger
+    openshift.io/display-name: AR Coupons app for egranger
+  labels:
+    argocd.argoproj.io/managed-by: argocd
