--- a/argocd-apps/dev-frontend.yaml
+++ b/argocd-apps/dev-frontend.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: model
+  name: frontend
   namespace: argocd-instance
 spec:
   destination:
@@ -12,18 +12,15 @@ spec:
     directory:
       # I believe I came across a bug then the line below is true
       recurse: false
-    path: ar-coupons/dev/model
+    path: ar-coupons/dev/frontend
     repoURL: https://github.com/rh-aiservices-bu/car-deploy.git
     targetRevision: dev
   syncPolicy:
-    automated: {}
-      #prune: true
-      #selfHeal: true
+    automated:
+      prune: true
+      selfHeal: true
   ignoreDifferences:
   - group: apps
     kind: Deployment
-    #name: car-rest
     jsonPointers:
       - /spec/template/spec/containers/0/image
-    # jqPathExpressions:
-    #   - .spec.template.spec.Containers[].image | select(.name == "arc-model")
