--- a/ar-coupons/dev/model/kustomization.yaml
+++ b/ar-coupons/dev/model/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namePrefix: dev-
+
 resources:
   - "100.model.imagestream.yaml"
   - "200.model.buildconfig.yaml"
