--- a/ar-coupons/dev/kafka/kustomization.yaml
+++ b/ar-coupons/dev/kafka/kustomization.yaml
@@ -1,5 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namePrefix: dev-
+
 resources:
   - "100.kafka.instance.yaml"
+  - "201.kafka.topics.images.yaml"
+  - "202.kafka.topics.objects.yaml"
