fix buildconfig names

--- a/ar-coupons/dev/frontend/200.frontend.buildconfig.yaml
+++ b/ar-coupons/dev/frontend/200.frontend.buildconfig.yaml
@@ -27,7 +27,7 @@ spec:
   output:
     to:
       kind: ImageStreamTag
-      name: 'arc-frontend:latest'
+      name: 'dev-arc-frontend:latest'
   triggers:
     - type: ConfigChange
     - type: ImageChange
