--- a/ar-coupons/dev/frontend/250.frontend.configmap.yaml
+++ b/ar-coupons/dev/frontend/250.frontend.configmap.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: arc-frontend
+  name: dev-arc-frontend
   labels:
-    app: arc-frontend
-    app.kubernetes.io/component: arc-frontend
-    app.kubernetes.io/instance: arc-frontend
-    app.kubernetes.io/part-of: arc-dev
+    app: dev-arc-frontend
+    app.kubernetes.io/component: dev-arc-frontend
+    app.kubernetes.io/instance: dev-arc-frontend
+    app.kubernetes.io/part-of: dev-arc
 data:
-  OBJECT_DETECTION_URL: "http://arc-model:8080/predictions"
+  OBJECT_DETECTION_URL: "http://dev-arc-model:8080/predictions"
