--- a/ar-coupons/dev/kafka/300.kafka.consumer.imagestream.yaml
+++ b/ar-coupons/dev/kafka/300.kafka.consumer.imagestream.yaml
@@ -2,10 +2,10 @@
 apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
-  name: arc-kafkaconsumer
+  name: dev-arc-kafkaconsumer
   labels:
-    app.kubernetes.io/name: arc-kafkaconsumer
-    app.kubernetes.io/part-of: arc-dev
+    app.kubernetes.io/name: dev-arc-kafkaconsumer
+    app.kubernetes.io/part-of: dev-arc
 spec:
   lookupPolicy:
     local: true
