--- a/ar-coupons/dev/frontend/100.frontend.imagestream.yaml
+++ b/ar-coupons/dev/frontend/100.frontend.imagestream.yaml
@@ -2,10 +2,10 @@
 apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
-  name: arc-frontend
+  name: dev-arc-frontend
   labels:
-    app.kubernetes.io/name: arc-frontend
-    app.kubernetes.io/part-of: arc-dev
+    app.kubernetes.io/name: dev-arc-frontend
+    app.kubernetes.io/part-of: dev-arc
 spec:
   lookupPolicy:
     local: true
