--- a/ar-coupons/dev/frontend/200.frontend.buildconfig.yaml
+++ b/ar-coupons/dev/frontend/200.frontend.buildconfig.yaml
@@ -2,12 +2,12 @@
 apiVersion: build.openshift.io/v1
 kind: BuildConfig
 metadata:
-  name: arc-frontend
+  name: dev-arc-frontend
   labels:
-    app: arc-frontend
-    app.kubernetes.io/component: arc-frontend
-    app.kubernetes.io/instance: arc-frontend
-    app.kubernetes.io/part-of: arc-dev
+    app: dev-arc-frontend
+    app.kubernetes.io/component: dev-arc-frontend
+    app.kubernetes.io/instance: dev-arc-frontend
+    app.kubernetes.io/part-of: dev-arc
 spec:
   nodeSelector: null
   postCommit: {}
