--- a/ar-coupons/dev/kafka/201.kafka.topics.images.yaml
+++ b/ar-coupons/dev/kafka/201.kafka.topics.images.yaml
@@ -3,9 +3,9 @@ kind: KafkaTopic
 metadata:
   name: images
   labels:
-    strimzi.io/cluster: arc
-    app: arc-kafka
-    app.kubernetes.io/part-of: arc
+    strimzi.io/cluster: dev-arc
+    app: dev-arc-kafka
+    app.kubernetes.io/part-of: dev-arc
 spec:
   partitions: 1
   replicas: 1
