--- a/ar-coupons/dev/kafka/600.kafka.consumer.service.yaml
+++ b/ar-coupons/dev/kafka/600.kafka.consumer.service.yaml
@@ -2,12 +2,12 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: arc-kafkaconsumer
+  name: dev-arc-kafkaconsumer
   labels:
-    app: arc-kafkaconsumer
-    app.kubernetes.io/component: arc-kafkaconsumer
-    app.kubernetes.io/instance: arc-kafkaconsumer
-    app.kubernetes.io/part-of: arc-dev
+    app: dev-arc-kafkaconsumer
+    app.kubernetes.io/component: dev-arc-kafkaconsumer
+    app.kubernetes.io/instance: dev-arc-kafkaconsumer
+    app.kubernetes.io/part-of: dev-arc
 spec:
   ipFamilies:
     - IPv4
@@ -21,7 +21,7 @@ spec:
   ipFamilyPolicy: SingleStack
   sessionAffinity: None
   selector:
-    app.kubernetes.io/part-of: arc-dev
-    deployment: arc-kafkaconsumer
+    app.kubernetes.io/part-of: dev-arc
+    deployment: dev-arc-kafkaconsumer
 status:
   loadBalancer: {}
