--- a/ar-coupons/dev/model/100.model.imagestream.yaml
+++ b/ar-coupons/dev/model/100.model.imagestream.yaml
@@ -2,10 +2,10 @@
 apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
-  name: arc-model
+  name: dev-arc-model
   labels:
-    app.kubernetes.io/name: arc-model
-    app.kubernetes.io/part-of: arc-dev
+    app.kubernetes.io/name: dev-arc-model
+    app.kubernetes.io/part-of: dev-arc
 spec:
   lookupPolicy:
     local: true
