--- a/ar-coupons/dev/model/200.model.buildconfig.yaml
+++ b/ar-coupons/dev/model/200.model.buildconfig.yaml
@@ -2,12 +2,12 @@
 apiVersion: build.openshift.io/v1
 kind: BuildConfig
 metadata:
-  name: arc-model
+  name: dev-arc-model
   labels:
-    app: arc-model
-    app.kubernetes.io/component: arc-model
-    app.kubernetes.io/instance: arc-model
-    app.kubernetes.io/part-of: arc-dev
+    app: dev-arc-model
+    app.kubernetes.io/component: dev-arc-model
+    app.kubernetes.io/instance: dev-arc-model
+    app.kubernetes.io/part-of: dev-arc
 spec:
   nodeSelector: null
   postCommit: {}
