--- a/ar-coupons/dev/model/500.model.route.yaml
+++ b/ar-coupons/dev/model/500.model.route.yaml
@@ -2,17 +2,17 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: arc-model
-    app.kubernetes.io/component: arc-model
-    app.kubernetes.io/instance: arc-model
-    app.kubernetes.io/part-of: arc-dev
-  name: arc-model
+    app: dev-arc-model
+    app.kubernetes.io/component: dev-arc-model
+    app.kubernetes.io/instance: dev-arc-model
+    app.kubernetes.io/part-of: dev-arc
+  name: dev-arc-model
 spec:
   port:
     targetPort: 8080-tcp
   to:
     kind: Service
-    name: arc-model
+    name: dev-arc-model
     weight: 100
   tls:
     termination: edge
