--- a/ar-coupons/dev/model/kustomization.yaml
+++ b/ar-coupons/dev/model/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namePrefix: dev-
 
 resources:
   - "100.model.imagestream.yaml"
@@ -9,3 +8,6 @@ resources:
   - "300.model.deployment.yaml"
   - "400.model.service.yaml"
   - "500.model.route.yaml"
+
+# namePrefix: dev-
+
