--- a/ar-coupons/dev/kafka/kustomization.yaml
+++ b/ar-coupons/dev/kafka/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namePrefix: dev-
+#namePrefix: dev-
 
 resources:
   - "100.kafka.instance.yaml"
