--- a/ar-coupons/dev/model/100.model.imagestream.yaml
+++ b/ar-coupons/dev/model/100.model.imagestream.yaml
@@ -6,6 +6,8 @@ metadata:
   labels:
     app.kubernetes.io/name: dev-arc-model
     app.kubernetes.io/part-of: dev-arc
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec:
   lookupPolicy:
     local: true
