--- a/ar-coupons/dev/model/500.model.route.yaml
+++ b/ar-coupons/dev/model/500.model.route.yaml
@@ -1,12 +1,14 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
+  name: dev-arc-model
   labels:
     app: dev-arc-model
     app.kubernetes.io/component: dev-arc-model
     app.kubernetes.io/instance: dev-arc-model
     app.kubernetes.io/part-of: dev-arc
-  name: dev-arc-model
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
 spec:
   port:
     targetPort: 8080-tcp
