--- a/argocd-apps/dev-kafka.yaml
+++ b/argocd-apps/dev-kafka.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kafka
+  name: dev-kafka
   namespace: argocd-instance
 spec:
   destination:
