--- a/argocd-apps/dev-model.yaml
+++ b/argocd-apps/dev-model.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: model
+  name: dev-model
   namespace: argocd-instance
 spec:
   destination:
