--- a/ar-coupons/pipeline/05_taskrun.yaml
+++ b/ar-coupons/pipeline/05_taskrun.yaml
@@ -2,6 +2,7 @@ apiVersion: tekton.dev/v1beta1
 kind: TaskRun
 metadata:
   generateName: test-run-
+  name: mytaskrun
 spec:
   taskRef:
     name: apply-manifests
